[project]
name = "rl-buffer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "windlx", email = "1418043337@qq.com" }]
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = ["torch>=2.8.0", "numpy>=2.2.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rl_buffer"]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]
